--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,15 @@
 <header>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8X8VY5J5E"></script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+
+   gtag('config', 'G-S8X8VY5J5E');
+  </script>
+  
   <div class="wrap topbar">
     <div class="brand">
       <span class="dot"></span>
