--- a/partials/header.html
+++ b/partials/header.html
@@ -14,7 +14,7 @@
       </h2>
 
       <!-- Infrastructure Link -->
-      <a class="infra-link" href="/infrastructure.html">
+      <a class="infra-link" href="/infrastructure">
         Fuel The Infrastructure
       </a>
 
@@ -23,13 +23,13 @@
     <!-- Navigation -->
     <nav class="navcenter">
       <a class="pill" href="/">Home</a>
-      <a class="pill" href="/json-formatter.html">JSON Formatter</a>
-      <a class="pill" href="/json-to-typescript.html">JSON to TypeScript</a>
-      <a class="pill" href="/jwt-decoder.html">JWT Decoder</a>
-      <a class="pill" href="/csp-analyzer.html">CSP Analyzer</a>
-      <a class="pill" href="/hash-generator.html">Hash Generator</a>
-      <a class="pill" href="/uuid-generator.html">UUID Generator</a>
-      <a class="pill" href="/log-explorer.html">Log Explorer</a>
+      <a class="pill" href="/json-formatter">JSON Formatter</a>
+      <a class="pill" href="/json-to-typescript">JSON to TypeScript</a>
+      <a class="pill" href="/jwt-decoder">JWT Decoder</a>
+      <a class="pill" href="/csp-analyzer">CSP Analyzer</a>
+      <a class="pill" href="/hash-generator">Hash Generator</a>
+      <a class="pill" href="/uuid-generator">UUID Generator</a>
+      <a class="pill" href="/log-explorer">Log Explorer</a>
     </nav>
 
   </div>
