--- a/partials/footer.html
+++ b/partials/footer.html
@@ -31,3 +31,11 @@ if (location.hostname === "surewhynot.app") {
   });
 }
 </script>
+
+<!-- CookieYes Banner -->
+<script
+  id="cookieyes"
+  async
+  type="text/javascript"
+  src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js">
+</script>
